# ParallelSorts

./: CMakeLists.txt  CurseWork.cpp  CurseWork.sln  CurseWork.vcxproj  CurseWork.vcxproj.filters  README.md  batcher_sort.cpp  batcher_sort.h  consts.h  file.txt  file_processing_functions.cpp  file_processing_functions.h  includes.h  main.cpp  main_file.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  printing_elements_stdout_stream.cpp  printing_elements_stdout_stream.h  resourses.qrc  sequential_sorts.cpp  sequential_sorts.h  shell_parallel_sort.cpp  shell_parallel_sort.h  thread_pool.h  timer.cpp  timer.h
src/: SampleSort.cpp  SampleSort.h  batcher_default_merge.cpp  batcher_default_merge.h  batcher_recursive.cpp  batcher_recursive.h  batcher_sort.cpp  batcher_sort.h  batcher_true_bitonic_merge.cpp  batcher_true_bitonic_merge.h  batcher_true_merge.cpp  batcher_true_merge.h  block_sort.cpp  block_sort.h  check.cpp  check.h  check_stdsort.cpp  check_stdsort.h  consts.h  element.cpp  element.h  final_batcher.cpp  final_batcher.h  generator.cpp  generator.h  main.cpp  new_batcher.cpp  new_batcher.h  sample_sort.cpp  sample_sort.h  sequential_sorts.cpp  sequential_sorts.h  show.cpp  show.h  thread_pool.cpp  thread_pool.h  threadpool.h  timer.cpp  timer.h  timer_common.cpp  (+3 more)
x64/Debug/: CurseWork.exe.recipe  CurseWork.ilk  CurseWork.vcxproj.FileListAbsolute.txt  cursework.obj.enc  vc143.idb
x64/Debug/CurseWork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CurseWork.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
